@@ -7,6 +7,7 @@
   * Added ability for execute_scripts to accept arguments
   * Added ability to identify frame using a regular expression when using Watir
   * Added href method to Link
+  * Added generation of plural version of basic types on class
 === Version 1.1.8/2017-01-18
 * Enhancements
   * Added ability to find elements using any valid attribute
